Comence a trabajar el index

--- a/index.html
+++ b/index.html
@@ -13,19 +13,22 @@
 
         <div class="header">
             <ul>
-                <li> <a href="./pages/shows.html"> SHOWS </a>  </li>
-                <li> <a href="#"> SESSIONS </a> </li>
-                <li> <a href="index.html"> <img src="images/logo.png" alt=""> </a> </li>
-                <li> <a href="#"> GALERIA </a> </li>
-                <li> <a href="#"> + </a> </li>
+                <li> <a class="nav-link" href="./pages/shows.html"> SHOWS </a>  </li>
+                <li> <a class="nav-link" href="#"> SESSIONS </a> </li>
+                <li> <a class="nav-link" href="index.html"> <img class="logo-header" src="images/logo2.png" alt=""> </a> </li>
+                <li> <a class="nav-link" href="#"> GALERIA </a> </li>
+                <li> <a class="nav-link" href="#"> LOREM100 </a> </li>
             </ul>
         </div>
 
     </header>
 
     <section>
-        <h1> bizarrap web </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero velit amet necessitatibus veritatis nihil eius quo commodi quas fuga sapiente, culpa delectus sit vitae ad harum! Eius cupiditate laboriosam, obcaecati magni nostrum dolore velit, tenetur nemo iure voluptatem explicabo repudiandae recusandae ad, laborum itaque enim accusamus incidunt repellendus sequi eos minus eveniet quasi quis quia! Laborum, error explicabo ipsa fugit sed quia, in voluptates repellat obcaecati quos dolor id voluptatibus ex, velit rerum! Vitae excepturi laborum saepe expedita exercitationem ad, atque quas veritatis, culpa ipsum impedit voluptatem eveniet consectetur. Repellendus rerum labore debitis praesentium, ut ab reiciendis exercitationem nobis dolores?</p>
+        <img src="images/biza2-index.jpg" alt="">
+    </section>
+
+    <section class="cards">
+        
     </section>
     
 </body>
