Empece a trabajar con las pesta;as de shows y escucha

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- LINK AL CSS -->
     <link rel="stylesheet" href="css/style.css">
-    <title> PROJECT 003</title>
+    <title> PROJECT 003 </title>
 </head>
 <body>
 
@@ -13,8 +13,8 @@
 
         <div class="header">
             <ul>
-                <li> <a class="nav-link" href="./pages/shows.html"> SHOWS </a>  </li>
-                <li> <a class="nav-link" href="#"> SESSIONS </a> </li>
+                <li> <a class="nav-link" href="pages/shows.html"> SHOWS </a>  </li>
+                <li> <a class="nav-link" href="pages/escucha.html"> ESCUCHA </a> </li>
                 <li> <a class="nav-link" href="index.html"> <img class="logo-header" src="images/logo2.png" alt=""> </a> </li>
                 <li> <a class="nav-link" href="#"> GALERIA </a> </li>
                 <li> <a class="nav-link" href="#"> LOREM100 </a> </li>
