--- a/pages/escucha.html
+++ b/pages/escucha.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- LINK AL CSS -->
     <link rel="stylesheet" href="../css/style.css">
-    <title> Shows - Bzrp </title>
+    <title> Sessions - Bzrp </title>
 </head>
 <body>
     
@@ -14,7 +14,7 @@
         <div class="header">
             <ul>
                 <li> <a class="nav-link" href="shows.html"> SHOWS </a>  </li>
-                <li> <a class="nav-link" href="escucha.html"> ESCUCHA </a> </li>
+                <li> <a class="nav-link" href="sessions.html"> ESCUCHA </a> </li>
                 <li> <a class="nav-link" href="../index.html"> <img class="logo-header" src="../images/logo2.png" alt=""> </a> </li>
                 <li> <a class="nav-link" href="#"> GALERIA </a> </li>
                 <li> <a class="nav-link" href="#"> LOREM100 </a> </li>
@@ -23,7 +23,11 @@
 
     </header>
 
+    <main>
 
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5BUh9lNkAPLc5JKPJkvkGI?utm_source=generator&theme=0" width="57%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+    </main>
 
 
 </body>
