Hice toda la galeria, y fui acomodando el shows.html.

--- a/pages/escucha.html
+++ b/pages/escucha.html
@@ -16,7 +16,7 @@
                 <li> <a class="nav-link" href="shows.html"> SHOWS </a>  </li>
                 <li> <a class="nav-link" href="sessions.html"> ESCUCHA </a> </li>
                 <li> <a class="nav-link" href="../index.html"> <img class="logo-header" src="../images/logo2.png" alt=""> </a> </li>
-                <li> <a class="nav-link" href="#"> GALERIA </a> </li>
+                <li> <a class="nav-link" href="galeria.html"> GALERIA </a> </li>
                 <li> <a class="nav-link" href="#"> LOREM100 </a> </li>
             </ul>
         </div>
