--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li> <a class="nav-link" href="pages/shows.html"> SHOWS </a>  </li>
                 <li> <a class="nav-link" href="pages/escucha.html"> ESCUCHA </a> </li>
                 <li> <a class="nav-link" href="index.html"> <img class="logo-header" src="images/logo2.png" alt=""> </a> </li>
-                <li> <a class="nav-link" href="#"> GALERIA </a> </li>
+                <li> <a class="nav-link" href="pages/galeria.html"> GALERIA </a> </li>
                 <li> <a class="nav-link" href="#"> LOREM100 </a> </li>
             </ul>
         </div>
@@ -73,16 +73,15 @@
     <footer>
 
         <hr>
-        <img src="images/logo2.png" alt="">
 
         <div class="redes">
-
-            div.
-
-
-
-
+            <a href="https://www.instagram.com/bizarrap/" target="_blank"> <img src="images/redes/logo-instagram.png" alt=""></a>
+            <a href="https://twitter.com/bizarrap" target="_blank"> <img src="images/redes/logo-twitter.png" alt=""></a>
+            <a href="https://www.tiktok.com/@bizarrap?lang=es" target="_blank"> <img src="images/redes/logo-tiktok.png" alt=""></a>
+            <a href="https://www.youtube.com/@Bizarrap" target="_blank"> <img src="images/redes/logo-youtube.png" alt=""></a>
         </div>
+
+        <p> Todos los derechos reservados a Bizarrap </p>
 
     </footer>
     
