Trabaje sobre las pestalas de ssions, generando cada una de la pags respectivas a los a;os. Mejore la galeria

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li> <a class="nav-link" href="pages/escucha.html"> ESCUCHA </a> </li>
                 <li> <a class="nav-link" href="index.html"> <img class="logo-header" src="images/logo2.png" alt=""> </a> </li>
                 <li> <a class="nav-link" href="pages/galeria.html"> GALERIA </a> </li>
-                <li> <a class="nav-link" href="#"> LOREM100 </a> </li>
+                <li> <a class="nav-link" href="pages/sessions.html"> SESSIONS </a> </li>
             </ul>
         </div>
 
