--- a/pages/shows.html
+++ b/pages/shows.html
@@ -10,18 +10,16 @@
 <body>
     
     <header>
-
         <div class="header">
             <ul>
                 <li> <a class="nav-link" href="shows.html"> SHOWS </a>  </li>
                 <li> <a class="nav-link" href="escucha.html"> ESCUCHA </a> </li>
                 <li> <a class="nav-link" href="../index.html"> <img class="logo-header" src="../images/logo2.png" alt=""> </a> </li>
                 <li> <a class="nav-link" href="galeria.html"> GALERIA </a> </li>
-                <li> <a class="nav-link" href="#"> LOREM100 </a> </li>
+                <li> <a class="nav-link" href="sessions.html"> SESSIONS </a> </li>
             </ul>
         </div>
-
-    </header>
+    </header>   
 
     <main>
 
