--- a/pages/shows.html
+++ b/pages/shows.html
@@ -23,9 +23,12 @@
 
     <main>
 
-        <img src="../images/map.png" alt="">
-
+        
         <section class="shows-america">
+            
+            <img src="../images/map.png" alt="">
+
+            <div class="america">
 
             <div class="lugares">
                 <h3> 📍 ARGENTINA </h3>
@@ -80,6 +83,7 @@
                     <p> - Quito. </p>
                 </div>
             </div>
+        </div>
 
         </section>
 
