Termine la seccion de las sessions

--- a/pages/años/2019.html
+++ b/pages/años/2019.html
@@ -25,100 +25,159 @@
 
         <div class="primeras">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=ybo9fpwTFto&ab_channel=Bizarrap" target="_blank"> 🧢 BHAVI </a>
-                
+                <a href="https://www.youtube.com/watch?v=Es7IKbFoDHc&ab_channel=Bizarrap">
+                    <div> 
+                        <img src="../../images/2019/bhavi.jpg" alt=""> 
+                        <p> 🧢 BHAVI </p> 
+                    </div>
+                </a>   
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=Es7IKbFoDHc&ab_channel=Bizarrap" target="_blank"> 🧢 ECKO </a>   
+                <a href="https://www.youtube.com/watch?v=Es7IKbFoDHc&ab_channel=Bizarrap">
+                    <img src="../../images/2019/ecko.jpg" alt=""> 
+                    <p> 🧢 ECKO </p> 
+                </a>   
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=-smN6ZUHzgk&ab_channel=Bizarrap" target="_blank"> 🧢 PACO AMOROSO </a> 
+                <a href="https://www.youtube.com/watch?v=-smN6ZUHzgk&ab_channel=Bizarrap" target="_blank"> <img src="../../images/2019/paco.jpg" alt=""> <p> 🧢 PACO AMOROSO </p> </a> 
             </div>
         </div>
 
          <div class="segundas">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=-iLUtxzR4ds&ab_channel=Bizarrap" target="_blank"> 🧢 BLUNTED VATO </a>
+                <a href="https://www.youtube.com/watch?v=-iLUtxzR4ds&ab_channel=Bizarrap" target="_blank"> 
+                    <img src="../../images/2019/blunted.jpg" alt="">
+                    <p> 🧢 BLUNTED VATO </p>                 
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=J5lloRbf2RQ&ab_channel=Bizarrap" target="_blank"> 🧢 PEKE 77 </a>
+                <a href="https://www.youtube.com/watch?v=J5lloRbf2RQ&ab_channel=Bizarrap" target="_blank"> 
+                    <img src="../../images/2019/peke.jpg" alt="">
+                    <p> 🧢 PEKE 77 </p> </a>
             </div>
 
             <div class="session">   
-                <a href="https://www.youtube.com/watch?v=pRNL60WXF3w&ab_channel=Bizarrap" target="_blank"> 🧢 KODIGO </a>
+                <a href="https://www.youtube.com/watch?v=pRNL60WXF3w&ab_channel=Bizarrap" target="_blank"> 
+                    <img src="../../images/2019/kodigo.jpg" alt="">
+                    <p> 🧢 KODIGO </p> </a>
             </div>
         </div>
 
         <div class="terceras">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=t8nB0Fyx69A&ab_channel=Bizarrap" target="_blank"> 🧢 DREFQUILA </a>
+                <a href="https://www.youtube.com/watch?v=t8nB0Fyx69A&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/drefquila.jpg" alt="">    
+                <p> 🧢 DREFQUILA </p>                
+                </a>
             </div>
 
             <div class="session"> 
-                <a href="https://www.youtube.com/watch?v=aEeoXjmQinU&ab_channel=Bizarrap" target="_blank"> 🧢 ZANTO </a>
+                <a href="https://www.youtube.com/watch?v=aEeoXjmQinU&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/zanto.jpg" alt="">    
+                <p> 🧢 ZANTO </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=QGDqhpnrIqI&ab_channel=Bizarrap" target="_blank"> 🧢 DILLOM </a>
+                <a href="https://www.youtube.com/watch?v=QGDqhpnrIqI&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/dillom.jpg" alt="">    
+                <p> 🧢 DILLOM </p>
+                </a>
             </div>
         </div>
 
         <div class="cuartas">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=t8nB0Fyx69A&ab_channel=Bizarrap" target="_blank"> 🧢 FRIJO </a>
+                <a href="https://www.youtube.com/watch?v=t8nB0Fyx69A&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/frijo.jpg" alt="">
+                <p> 🧢 FRIJO </p>  
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=aEeoXjmQinU&ab_channel=Bizarrap" target="_blank"> 🧢 KIDDO TOTO </a>
+                <a href="https://www.youtube.com/watch?v=aEeoXjmQinU&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/kiddo.jpg" alt="">    
+                <p> 🧢 KIDDO TOTO </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=QGDqhpnrIqI&ab_channel=Bizarrap" target="_blank"> 🧢 MESITA </a>
+                <a href="https://www.youtube.com/watch?v=QGDqhpnrIqI&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/mesita.jpg" alt="">
+                <p> 🧢 MESITA </p>
+                </a>
             </div>
         </div>
 
         <div class="quintas">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=gW165h1-AZE&ab_channel=Bizarrap" target="_blank"> 🧢 NICKI NICOLE </a>
+                <a href="https://www.youtube.com/watch?v=gW165h1-AZE&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/nicki.jpg">     
+                <p> 🧢 NICKI NICOLE </p>                
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=TzUdpcNV-Q8&ab_channel=Bizarrap" target="_blank"> 🧢 CATRIEL </a>
+                <a href="https://www.youtube.com/watch?v=TzUdpcNV-Q8&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/catriel.jpg" alt="">    
+                <p> 🧢 CATRIEL </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=zj6R6foXaKI&ab_channel=Bizarrap" target="_blank"> 🧢 ALEMAN </a>
+                <a href="https://www.youtube.com/watch?v=zj6R6foXaKI&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/aleman.jpg" alt="">    
+                <p> 🧢 ALEMAN </p>
+                </a>
             </div>
         </div>
 
         <div class="sextas">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=SSuTme04Bys&ab_channel=Bizarrap" target="_blank"> 🧢 TRUENO </a>
+                <a href="https://www.youtube.com/watch?v=SSuTme04Bys&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/trueno.jpg" alt="">    
+                <p> 🧢 TRUENO </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=LI5dh5zCKi0&ab_channel=Bizarrap" target="_blank"> 🧢 KINDER MALO (LADO A) </a>
+                <a href="https://www.youtube.com/watch?v=LI5dh5zCKi0&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/kindera.jpg" alt="">    
+                <p> 🧢 KINDER MALO (LADO A)  </p>
+            </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=q-9Dazkclxk&ab_channel=Bizarrap" target="_blank"> 🧢 KINDER MALO (LADO B) </a>
+                <a href="https://www.youtube.com/watch?v=q-9Dazkclxk&ab_channel=Bizarrap" target="_blank">
+                <img src="../../images/2019/kinderb.jpg" alt="">
+                <p> 🧢 KINDER MALO (LADO B) </p>
+            </a>
             </div>
         </div>
 
         <div class="septimas">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=o42797MbLRI&ab_channel=Bizarrap" target="_blank"> 🧢 JOHN C </a>
+                <a href="https://www.youtube.com/watch?v=o42797MbLRI&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/johnc.jpg" alt="">    
+                <p> 🧢 JOHN C </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=cWfOVzXiAQE&ab_channel=Bizarrap" target="_blank"> 🧢 POLIMA WESTCOAST </a>
+                <a href="https://www.youtube.com/watch?v=cWfOVzXiAQE&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/polima.jpg" alt="">    
+                <p> 🧢 POLIMA WESTCOAST </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=HdGDLqRQNII&ab_channel=Bizarrap" target="_blank"> 🧢 LOUTA </a>
+                <a href="https://www.youtube.com/watch?v=HdGDLqRQNII&ab_channel=Bizarrap" target="_blank">
+                <img src="../../images/2019/louta.jpg" alt="">
+                <p> 🧢 LOUTA </p>    
+                </a>
             </div>
         </div>
 
