--- a/pages/años/2020.html
+++ b/pages/años/2020.html
@@ -25,72 +25,117 @@
 
         <div class="primeras">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=ybo9fpwTFto&ab_channel=Bizarrap" target="_blank"> 🧢 NEUTRO SHORTY </a>
+                <a href="https://www.youtube.com/watch?v=ybo9fpwTFto&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/neutro.jpg" alt="">    
+                <p> 🧢 NEUTRO SHORTY </p>
+                </a>
                 
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=exuRTyiNbYU&ab_channel=Bizarrap" target="_blank"> 🧢 LALO EBRATT </a>   
+                <a href="https://www.youtube.com/watch?v=exuRTyiNbYU&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/lalo.jpg" alt="">    
+                <p> 🧢 LALO EBRATT </p>                
+                </a>   
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=LDtABz-5Ka4&ab_channel=Bizarrap" target="_blank"> 🧢 DANI </a> 
+                <a href="https://www.youtube.com/watch?v=LDtABz-5Ka4&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/dani.jpg" alt="">    
+                <p> 🧢 DANI </p>            
+                </a> 
             </div>
         </div>
 
          <div class="segundas">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=joNX1WcXUck&ab_channel=Bizarrap" target="_blank"> 🧢 DON PATRICIO </a>
+                <a href="https://www.youtube.com/watch?v=joNX1WcXUck&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/donpa.jpg" alt="">    
+                <p> 🧢 DON PATRICIO </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=X7KC9J-ArdQ&ab_channel=Bizarrap" target="_blank"> 🧢 LUCHO SSJ </a>
+                <a href="https://www.youtube.com/watch?v=X7KC9J-ArdQ&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/lucho.jpg" alt="">    
+                <p> 🧢 LUCHO SSJ </p>
+                </a>
             </div>
 
             <div class="session">   
-                <a href="https://www.youtube.com/watch?v=TGPQOAmx8ko&ab_channel=Bizarrap" target="_blank"> 🧢 BEJO </a>
+                <a href="https://www.youtube.com/watch?v=TGPQOAmx8ko&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/bejo.jpg" alt="">    
+                <p> 🧢 BEJO </p>
+                </a>
             </div>
         </div>
 
         <div class="terceras">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=G5Wng8W8S8A&ab_channel=Bizarrap" target="_blank"> 🧢 BIG SOTO </a>
+                <a href="https://www.youtube.com/watch?v=G5Wng8W8S8A&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/big.jpg" alt="">    
+                <p> 🧢 BIG SOTO </p>
+                </a>
             </div>
 
             <div class="session"> 
-                <a href="https://www.youtube.com/watch?v=Nb_lsnx8BoQ&ab_channel=Bizarrap" target="_blank"> 🧢 C.R.O </a>
+                <a href="https://www.youtube.com/watch?v=Nb_lsnx8BoQ&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/cro.jpg" alt="">    
+                <p> 🧢 C.R.O </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=HzCuP2xvu-I&ab_channel=Bizarrap" target="_blank"> 🧢 HOMER EL MERO MERO </a>
+                <a href="https://www.youtube.com/watch?v=HzCuP2xvu-I&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/homer.jpg" alt="">    
+                <p> 🧢 HOMER EL MERO MERO </p>                
+                </a>
             </div>
         </div>
 
         <div class="cuartas">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=4OKgRMRDusM&ab_channel=Bizarrap" target="_blank"> 🧢 ZARAMAY </a>
+                <a href="https://www.youtube.com/watch?v=4OKgRMRDusM&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/zamaray.jpg" alt="">    
+                <p> 🧢 ZARAMAY </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=prU2g7PBTxs&ab_channel=Bizarrap" target="_blank"> 🧢 CAZZU </a>
+                <a href="https://www.youtube.com/watch?v=prU2g7PBTxs&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/cazzu.jpg" alt="">
+                <p> 🧢 CAZZU </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=Dmqpcz0OfPw&ab_channel=Bizarrap" target="_blank"> 🧢 SEVEN KAYNE </a>
+                <a href="https://www.youtube.com/watch?v=Dmqpcz0OfPw&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/seven.jpg" alt="">
+                <p> 🧢 SEVEN KAYNE </p>
+                </a>
             </div>
         </div>
 
         <div class="quintas">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=QAf-SvxZIx0&ab_channel=Bizarrap" target="_blank"> 🧢 KHEA </a>
+                <a href="https://www.youtube.com/watch?v=QAf-SvxZIx0&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/khea.jpg" alt="">
+                <p> 🧢 KHEA </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=QAkRObfMBhk&ab_channel=Bizarrap" target="_blank"> 🧢 ASAN </a>
+                <a href="https://www.youtube.com/watch?v=QAkRObfMBhk&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/asan.jpg" alt="">    
+                <p> 🧢 ASAN </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=0OkiUUU3Odw&ab_channel=Bizarrap" target="_blank"> 🧢 NATHY PELUSO </a>
+                <a href="https://www.youtube.com/watch?v=0OkiUUU3Odw&ab_channel=Bizarrap" target="_blank">  
+                <img src="../../images/2019/nathy peluso.jpg" alt="">
+                <p> 🧢 NATHY PELUSO </p>
+                </a>
             </div>
         </div>
 
