--- a/pages/años/2021.html
+++ b/pages/años/2021.html
@@ -25,53 +25,86 @@
 
         <div class="primeras">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=HbeLYtQqkIg&ab_channel=Bizarrap" target="_blank"> 🧢 YSY A </a>                
+                <a href="https://www.youtube.com/watch?v=HbeLYtQqkIg&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/ysy.jpg" alt="">    
+                <p> 🧢 YSY A </p>
+                </a>                
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=z7rI82hyels&ab_channel=Bizarrap" target="_blank"> 🧢 L-GANTE </a>   
+                <a href="https://www.youtube.com/watch?v=z7rI82hyels&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/lgante.jpg" alt="">
+                <p> 🧢 L-GANTE </p>
+                </a>   
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=t490zXLrQDE&ab_channel=Bizarrap" target="_blank"> 🧢 SNOW THA PRODUCT </a> 
+                <a href="https://www.youtube.com/watch?v=t490zXLrQDE&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/snow.jpg" alt="">
+                <p> 🧢 SNOW THA PRODUCT </p>
+                </a> 
             </div>
         </div>
 
          <div class="segundas">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=s5cYXknsDbY&ab_channel=Bizarrap" target="_blank"> 🧢 ELADIO CARRION </a>
+                <a href="https://www.youtube.com/watch?v=s5cYXknsDbY&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/eladio.jpg" alt="">    
+                <p> 🧢 ELADIO CARRION </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=BH6T3CTuncc&ab_channel=Bizarrap" target="_blank"> 🧢 NICKY JAM </a>
+                <a href="https://www.youtube.com/watch?v=BH6T3CTuncc&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/nickyja.jpg" alt=""> 
+                <p> 🧢 NICKY JAM </p>
+                </a>
             </div>
 
             <div class="session">   
-                <a href="https://www.youtube.com/watch?v=r63YPAW2G9M&ab_channel=Bizarrap" target="_blank"> 🧢 CHUCKY 73 </a>
+                <a href="https://www.youtube.com/watch?v=r63YPAW2G9M&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/chucky.jpg" alt="">
+                <p> 🧢 CHUCKY 73 </p>
+                </a>
             </div>
         </div>
 
         <div class="terceras">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=of_3rje8oKA&ab_channel=Bizarrap" target="_blank"> 🧢 MHD </a>
+                <a href="https://www.youtube.com/watch?v=of_3rje8oKA&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/mhd.jpg" alt="">    
+                <p> 🧢 MHD </p>
+                </a>
             </div>
 
             <div class="session"> 
-                <a href="https://www.youtube.com/watch?v=yLX87IkvT8I&ab_channel=Bizarrap" target="_blank"> 🧢 PTAZETA </a>
+                <a href="https://www.youtube.com/watch?v=yLX87IkvT8I&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/ptazeta.jpg" alt="">   
+                <p> 🧢 PTAZETA </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=O5Vd-I1gd7Y&ab_channel=Bizarrap" target="_blank"> 🧢 ANUEL AA </a>
+                <a href="https://www.youtube.com/watch?v=O5Vd-I1gd7Y&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/anuel.jpg" alt="">   
+                <p> 🧢 ANUEL AA </p>
+                </a>
             </div>
         </div>
 
         <div class="cuartas">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=FsF3o9XNcN8&ab_channel=Bizarrap" target="_blank"> 🧢 MORAD </a>
+                <a href="https://www.youtube.com/watch?v=FsF3o9XNcN8&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/morad.jpg" alt="">   
+                <p> 🧢 MORAD </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=h7U8TqOVyxc&ab_channel=Bizarrap" target="_blank"> 🧢 TIAGO PZK </a>
+                <a href="https://www.youtube.com/watch?v=h7U8TqOVyxc&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/tiago.jpg" alt="">  
+                <p> 🧢 TIAGO PZK </p>
+                </a>
             </div>
         </div>
 
