--- a/pages/años/2022.html
+++ b/pages/años/2022.html
@@ -25,25 +25,40 @@
 
         <div class="primeras">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=HO73gUhiYe0&ab_channel=Bizarrap" target="_blank"> 🧢 RESIDENTE </a>                
+                <a href="https://www.youtube.com/watch?v=HO73gUhiYe0&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/residente.jpg" alt="">    
+                <p> 🧢 RESIDENTE </p>
+                </a>                
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=WkgHkrM9fo0&ab_channel=Bizarrap" target="_blank"> 🧢 PAULO LONDRA </a>   
+                <a href="https://www.youtube.com/watch?v=WkgHkrM9fo0&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/paulo.jpg" alt="">   
+                <p> 🧢 PAULO LONDRA </p>
+                </a>   
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=wvz97-lNPH8&ab_channel=Bizarrap" target="_blank"> 🧢 VILLANO ANTILLANO </a> 
+                <a href="https://www.youtube.com/watch?v=wvz97-lNPH8&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/villano.jpg" alt="">   
+                <p> 🧢 VILLANO ANTILLANO </p>
+                </a> 
             </div>
         </div>
 
          <div class="segundas">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=A_g3lMcWVy0&ab_channel=Bizarrap" target="_blank"> 🧢 QUEVEDO </a>
+                <a href="https://www.youtube.com/watch?v=A_g3lMcWVy0&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/quevedo.jpg" alt="">    
+                <p> 🧢 QUEVEDO </p>
+                </a>
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=Gzs60iBgd3E&ab_channel=Bizarrap" target="_blank"> 🧢 DUKI </a>
+                <a href="https://www.youtube.com/watch?v=Gzs60iBgd3E&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/duki.jpg" alt="">
+                <p> 🧢 DUKI </p>
+                </a>
             </div>
     </main>
 
