--- a/pages/años/2023.html
+++ b/pages/años/2023.html
@@ -25,21 +25,33 @@
 
         <div class="primeras">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=CocEMWdc7Ck&ab_channel=Bizarrap" target="_blank"> 🧢 SHAKIRA </a>                
+                <a href="https://www.youtube.com/watch?v=CocEMWdc7Ck&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/shakira.jpg" alt="">    
+                <p> 🧢 SHAKIRA </p>
+                </a>                
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=ntCZjb_AAWE&ab_channel=Bizarrap" target="_blank"> 🧢 ARCANGEL </a>   
+                <a href="https://www.youtube.com/watch?v=ntCZjb_AAWE&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/arangel.jpg" alt="">    
+                <p> 🧢 ARCANGEL </p>
+                </a>   
             </div>
 
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=v5_SYkFpFiY&ab_channel=Bizarrap" target="_blank"> 🧢 PESO PLUMA </a> 
+                <a href="https://www.youtube.com/watch?v=v5_SYkFpFiY&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/pesopluma.jpg" alt="">   
+                <p> 🧢 PESO PLUMA </p>
+                </a> 
             </div>
         </div>
 
          <div class="segundas">
             <div class="session">
-                <a href="https://www.youtube.com/watch?v=HWZhoK-2cG8&ab_channel=Bizarrap" target="_blank"> 🧢 RAUW ALEJANDRO </a>
+                <a href="https://www.youtube.com/watch?v=HWZhoK-2cG8&ab_channel=Bizarrap" target="_blank"> 
+                <img src="../../images/2019/rauw.jpg" alt="">
+                <p> 🧢 RAUW ALEJANDRO </p>
+                </a>
             </div>
     </main>
 
