Termine con el proyecto, agregandole las mediaqueries para que sea responsive.

--- a/pages/años/2023.html
+++ b/pages/años/2023.html
@@ -22,7 +22,7 @@
         </div>
     </header> 
 
-    <main>
+    <main class="main-años">
 
         <div class="primeras">
             <div class="session">
