--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- LINK AL CSS -->
     <link rel="stylesheet" href="css/style.css">
     <title> PROJECT 003 </title>
+    <meta name="description" content="Pagina dedicada a Bizarrap"
 </head>
 <body>
 
