--- a/pages/escucha.html
+++ b/pages/escucha.html
@@ -24,9 +24,29 @@
 
     <main>
 
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5BUh9lNkAPLc5JKPJkvkGI?utm_source=generator&theme=0" width="57%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <section class="iframe-container">
 
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5BUh9lNkAPLc5JKPJkvkGI?utm_source=generator&theme=0" width="57%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+
+        </section>
+        
     </main>
+
+    <footer>
+
+        <hr>
+
+        <div class="redes">
+            <a href="https://www.instagram.com/bizarrap/" target="_blank"> <img src="../images/redes/logo-instagram.png" alt=""></a>
+            <a href="https://twitter.com/bizarrap" target="_blank"> <img src="../images/redes/logo-twitter.png" alt=""></a>
+            <a href="https://www.tiktok.com/@bizarrap?lang=es" target="_blank"> <img src="../images/redes/logo-tiktok.png" alt=""></a>
+            <a href="https://www.youtube.com/@Bizarrap" target="_blank"> <img src="../images/redes/logo-youtube.png" alt=""></a>
+        </div>
+
+        <p> Todos los derechos reservados a Bizarrap </p>
+
+    </footer>
 
 
 </body>
